--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  #flutter_camera_ml_vision:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -28,6 +27,10 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  camera: ^0.2.9+1
+  path_provider: ^0.4.1
+  firebase_ml_vision: ^0.2.1
 
 
 # For information on the generic Dart part of this file, see the
